Bug 387332 - uninitialized variable warning for asciifilter
Summary: uninitialized variable warning for asciifilter
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: backend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-27 00:06 UTC by uwestoehr
Modified: 2017-12-05 22:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-27 00:06:37 UTC
I get:

2>c:\craftroot\labplot\src\backend\datasources\filters\asciifilter.cpp(765): warning C4701: potentially uninitialized local variable 'linesToRead' used
Comment 1 uwestoehr 2017-12-05 00:18:42 UTC
Now I get this:

1>C:\CraftRoot\labplot\src\backend\datasources\filters\AsciiFilter.cpp(578): warning C4127: conditional expression is constant
1>C:\CraftRoot\labplot\src\backend\datasources\filters\AsciiFilter.cpp(1046): warning C4127: conditional expression is constant
Comment 2 Alexander Semke 2017-12-05 22:15:40 UTC
Git commit 641e286d67d83055408da9117a45c7f66fdf1b60 by Alexander Semke.
Committed on 05/12/2017 at 22:14.
Pushed by asemke into branch 'master'.

Fixed potentially uninitialized variable and remove some obsolete asserts in AsciiFilter.cpp.
FIXED-IN: 2.5

M  +7    -10   src/backend/datasources/filters/AsciiFilter.cpp

https://commits.kde.org/labplot/641e286d67d83055408da9117a45c7f66fdf1b60