Fixed potentially uninitialized variable and remove some obsolete asserts in AsciiFilter.cpp.

BUG: 387332
FIXED-IN: 2.5